hice cambios y corregi

--- a/index.html
+++ b/index.html
@@ -3,49 +3,45 @@
   <head>
   	<meta charset="UTF-8">
   	<title>Chicama</title>
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/cutegrids.css">
+	  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/cutegrids.css">
     <link rel="stylesheet" href="normalize.css">
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel="icon" type="image/png" href="favicon.ico">
   </head>
+
   <body>
-  <header>
-  <section class="cute-12-laptop">
+    <header>
       <div class="principal">
         <div class="sumate"><a href="#">Súmate</a></div>
-        <div class="logo">
-          <a href="#"><img src="img/logo.png" width=430px height=70px alt="laboratoria"></a>
-        </div>
+        <div class="logo"><a href="#"><img src="img/logo.png" width=430px height=70px alt="laboratoria"></a></div>
         <nav class="cute-10-laptop">
-            <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">CONTACTO</a></li>
-            </ul>
+          <ul>
+            <li><a href="#">INICIO</a></li>
+            <li><a href="#">NOSOTROS</a></li>
+            <li><a href="#">CONTACTO</a></li>
+          </ul>
         </nav>
       </div>
-  </section>
-  </header>
+    </header>
+
     <section class="cute-12-laptop">
-         <div class="cute-4-laptop">
-            <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
-            <h4>EL LENGUAJE DEL FUTURO</h4>
-         </div>
-         <div class="cute-4-laptop">
-            <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
-            <h4>APRENDER A APRENDER</h4>
-         </div>
-         <div class="cute-4-laptop left">
-            <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
-            <h4>EMPRENDIMIENTO</h4>
-        </div>
-    
+      <div class="cute-4-laptop">
+       <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
+       <h4>EL LENGUAJE DEL FUTURO</h4>
+      </div>
+      <div class="cute-4-laptop">
+       <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
+       <h4>APRENDER A APRENDER</h4>
+      </div>
+      <div class="cute-4-laptop left">
+       <img src="img/grupal.jpg" width=400px height=260px alt="promocion-laboratoria">
+       <h4>EMPRENDIMIENTO</h4>
+      </div>    
     </section>
+
     <footer class="cute-12-laptop color-footer">
-        <div class="texto-footer">
-            Laboratoria 2014. | sumate@laboratoria.la | tel: +51 997 350 298
-        </div>
+      <div class="texto-footer">Laboratoria 2014. | sumate@laboratoria.la | tel: +51 997 350 298</div>
     </footer>
   </body>
 </html>
